Initial commit for GCS file uploader

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,20 +1,17 @@
-$project :=
+project :=
+version := auto
+bucket :=
 
-install:
-	pip install -r requirements.txt -t lib
+cors:
+	gsutil cors set cors-policy.json gs://$(bucket)
 
 run:
 	dev_appserver.py app.yaml
-
-deploy-dispatch:
-	gcloud app deploy \
-		-q \
-		--project=$(project) \
-		dispatch.yaml
 
 deploy:
 	gcloud app deploy \
 		-q \
 		--project=$(project) \
+		--version=$(version) \
 		--promote \
 		app.yaml
